carrying out modification for github hosting url

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<title>The Monkees</title>
 </head>
 
 <body>
 	<div class="bg-video">
 		<video loop muted autoplay class="bg-video">
-	  		<source src="/assets/video/pr-video/flames.mp4" type="video/mp4">
-	  		<source src="/assets/videos/flames.webm" type="video/webm">
-	  		<source src="/assets/videos/flames.ogg" type="video/ogg">
+	  		<source src="assets/video/pr-video/flames.mp4" type="video/mp4">
+	  		<source src="assets/videos/flames.webm" type="video/webm">
+	  		<source src="assets/videos/flames.ogg" type="video/ogg">
 	  	</video>
 	</div>
 	<header class="header">
@@ -42,14 +42,14 @@
 			<div id="slide-menu" class="side-nav">
 				<ul>
 					<li><a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a></li>
-					<li><a href="/index.html">Home</a></li>
-					<li><a href="/showcase.html">Showcase</a></li>
-					<li><a href="/service.html">Services</a></li>
-					<li><a href="/about.html">About</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="showcase.html">Showcase</a></li>
+					<li><a href="service.html">Services</a></li>
+					<li><a href="about.html">About</a></li>
 
-					<li><a href="/contact.html">Contact</a></li>
-					<li><a href="/contact.html">Join Now!</a></li>
-					<li><a href="/contact.html">Log In</a></li>
+					<li><a href="contact.html">Contact</a></li>
+					<li><a href="contact.html">Join Now!</a></li>
+					<li><a href="contact.html">Log In</a></li>
 
 					<li class="tel"><a href="tel:+353899661882" style="color: #ffaa00;">+353899661882</a></li>
 				</ul>
@@ -81,7 +81,7 @@
 				
 					<fig class="wedding-couples image">
 						<a href="showcase.html">
-	  						<img src="/assets/images/wedding-couples.jpg"  style="height: 30%; width: 20%; margin-left: 20%; padding: 15px; border-radius: 50%; opacity:0.5;" alt="Wedding Couples">
+	  						<img src="assets/images/wedding-couples.jpg"  style="height: 30%; width: 20%; margin-left: 20%; padding: 15px; border-radius: 50%; opacity:0.5;" alt="Wedding Couples">
 	  					</a>
 						<figcaption class="caption-wedding"><i>“If music be the food of love,<br> play on, Give me excess of it;....”</i>
 							<p>-Williams Shakespeare</p>
@@ -93,7 +93,7 @@
 				
 					<fig class="firey image">
 						<a href="showcase.html">
-	  						<img src="/assets/images/fiery-image.png"  style="height: 270px; width: 170px; margin-left: 25%; padding: 15px; border-radius: 50%; opacity: 0.7;" alt="Human Skeleton burning in flames playing guiter">
+	  						<img src="assets/images/fiery-image.png"  style="height: 270px; width: 170px; margin-left: 25%; padding: 15px; border-radius: 50%; opacity: 0.7;" alt="Human Skeleton burning in flames playing guiter">
 	  					</a>
 						<figcaption class="caption-soul" style="margin-left: 17%;"><i style=" color: white;">"The sound of your music is a flame of fire,<br> it burns deep into my soul"</i>
 							<p style="color: white;">-Achile</p>
