--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 		    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 		    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+		    <link rel="stylesheet" href="/assets/css/styles.css" type="text/css" />
 		    <style>
 		    	body {
 		    		background-color: #708090;
