path corrections made to rectify display error on github

--- a/contact.html
+++ b/contact.html
@@ -95,10 +95,10 @@
 			<p class="address">280 Chambers Park<br>Kilcock<br>Co.Kildare<br>isahokolo@yahoo.ie</p>
 		</aside>
 		<section class="contact-section">
-			<a href="/contact-logister.html"><button class="btn-logister">Register/Log In!</button></a>
-			<a href="/contact-christmas.html"><button class="btn-christmas">Christmas booking</button></a>
-			<a href="/contact-birthday.html"><button class="btn-birthday">Birthday and Marriage</button></a>
-			<a href="/contact-feedback.html"><button class="btn-feedback">Feedback</button></a>
+			<a href="contact-logister.html"><button class="btn-logister">Register/Log In!</button></a>
+			<a href="contact-christmas.html"><button class="btn-christmas">Christmas booking</button></a>
+			<a href="contact-birthday.html"><button class="btn-birthday">Birthday and Marriage</button></a>
+			<a href="contact-feedback.html"><button class="btn-feedback">Feedback</button></a>
 		</section>
 	</div>
 	<!--/vessel-->
