--- a/contact-christmas.html
+++ b/contact-christmas.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/styles.css" type="text/css" />
 
     <style>
         body {
-            background-image: url("/assets/images/pr-image/chrismas.jpg");
+            background-image: url("assets/images/pr-image/chrismas.jpg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: 100% 100%;
