--- a/contact-feedback.html
+++ b/contact-feedback.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/styles.css" type="text/css" />
    
     <style>
     
     body {
-    background-image: url("/assets/images/pr-image/Feedback.jpg");
+    background-image: url("../assets/images/pr-image/Feedback.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
