--- a/showcase.html
+++ b/showcase.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
     <style>
         body {
-            background-image: url("../assets/images/pr-image/monkees.jpg");
+            background-image: url("assets/images/pr-image/monkees.jpg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: 100% 100%;
